--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="Challenges/sum.js"></script> -->
     <!-- <script src="Challenges/multiple.js"></script> -->
     <!-- <script src="loops.js/ternary.js"></script> -->
-    <script src="loops.js/loop.js"></script>
+    <!-- <script src="loops.js/loop.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
